--- a/mks-sistemas-challenge/package.json
+++ b/mks-sistemas-challenge/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
+    "@iconify/react": "^4.0.1",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7"
   }
