--- a/mks-sistemas-challenge/package.json
+++ b/mks-sistemas-challenge/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -17,12 +18,14 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@iconify/react": "^4.0.1",
+    "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7"
   }
