--- a/mks-sistemas-challenge/package.json
+++ b/mks-sistemas-challenge/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@next/font": "13.1.5",
     "@reduxjs/toolkit": "^1.9.1",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -25,8 +29,12 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@iconify/react": "^4.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@types/jest": "^29.4.0",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7"
+    "babel-plugin-styled-components": "^2.0.7",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1"
   }
 }
